fix(select): modified internal padding constraint to prevent text overflow

--- a/src/components/select/styles/vars/CdrSelect.vars.scss
+++ b/src/components/select/styles/vars/CdrSelect.vars.scss
@@ -40,7 +40,7 @@ $cdr-select-base-box-shadow: inset 0 0 0 1px $cdr-color-border-primary-lightmode
 $cdr-select-base-border: 0;
 $cdr-select-base-border-radius: $cdr-radius-softer;
 $cdr-select-base-padding-left: $cdr-space-half-x;
-$cdr-select-base-padding-right: $cdr-space-half-x;
+$cdr-select-base-padding-right: $cdr-space-two-x;
 $cdr-select-base-height: 40px;
 $cdr-select-base-display: block;
 $cdr-select-base-width: 100%;
@@ -84,8 +84,6 @@ $cdr-select-base-prompt-color: $cdr-color-text-form-placeholder-lightmode;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-    //text-indent: 1px;
-    //text-overflow:'';
 
   &::-ms-expand {
     display: none;
